fixed partial and banner only on small screens

--- a/Resources/StyleSheets/main.css
+++ b/Resources/StyleSheets/main.css
@@ -119,6 +119,16 @@ select.form-control {
 	position: relative;
 }
 
+.sbo-navbar-logo > img {
+	max-height: 3em;
+}
+
+@media only screen and (min-width: 768px) {
+    .applayout-banner {
+        display: none;
+    }
+}
+
 .sbo-navbar-item > .sbo-navbar-link-wrapper > a {
 	color: #000000;
 }
